# GameOfLifeSDL2

./: CMakeLists.txt  README.md
src/: GameBoard.h  GameScene.cpp  GameScene.h  main.cpp
